Fixed: Volpiano has greater line spacing

--- a/public/cantusdata/static/css/styles.css
+++ b/public/cantusdata/static/css/styles.css
@@ -26,6 +26,7 @@ html {
 .volpiano {
     font-family: 'Volpiano';
     font-size: 22pt;
+    line-height: 2em;
 }
 
 .cantus-container {
